--- a/index.html
+++ b/index.html
@@ -11,18 +11,39 @@
     <script type="text/javascript">
         $(function () {
             var data = new can.Model.List([
-                {a: 1, b: 333, c: 'adasd'},
-                {a: 2, b: 555, c: 'adfaf'},
-                {a: 3, b: 666, c: 'adfa'},
-                {a: 4, b: 777, c: 'sgfsgs'}
+                {a: 1, b: 2, c: 3}
             ]);
-
-            $('#container').html(
-                can.view('tpl', {data: data})
+            $('.table-container').html(
+                    can.view('tpl', {data: data})
             );
 
-            $('a.add').click(function () {
-                data.push({a: 1,b: 2,c: 3});
+
+            $('a.add').click(function (evt) {
+                var fixtureData = [],
+                    $this = $(this),
+                    count = parseInt($this.text());
+
+                for (var i = 0; i < count; i++) fixtureData.push({a: i, b: i, c: i});
+
+
+
+                var start = Date.now(),
+                    cssSelector = '';
+
+                data.replace([]);
+                if ($this.hasClass('by-replace')) {
+                    cssSelector = '.time-use.by-replace';
+
+                    data.replace(data.concat(fixtureData));
+                } else {
+                    cssSelector = '.time-use.by-push';
+
+                    fixtureData.forEach(function (d) {
+                        data.push(d);
+                    });
+                }
+
+                $(cssSelector).text(count + " rows data,  Time use: " + (Date.now() - start).toString());
             })
         });
     </script>
@@ -34,28 +55,97 @@
 
 <h1>Demo - Can.List demo</h1>
 
-<div class="btn-group">
-    <a class="btn btn-primary add">Add</a>
+<div class="container-fluid">
+    <div class="row">
+        <div class="alert">
+            <p>Bind "data" can.Model.List object to ejs </p>
+            <p>
+                <code>
+                    <span>$('.table-container').html(</span><br>
+                    <span>&nbsp;&nbsp;can.view('tpl', {data: data}) </span><br>
+                    <span>)</span>;
+                </code>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Add (n Rows) <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a class="add">15</a></li>
+                    <li><a class="add">50</a></li>
+                    <li><a class="add">100</a></li>
+                    <li><a class="add">300</a></li>
+                    <li><a class="add">500</a></li>
+                    <li><a class="add">1000</a></li>
+                </ul>
+            </div>
+            <div class="alert alert-success">
+                <p> Use "forEach" and "push" </p>
+                <code class="html">
+                    fixtureData.forEach(function(d) {
+                    data.push(d);
+                    });
+                </code>
+                <br>
+
+                <div class="time-use by-push"></div>
+            </div>
+        </div>
+
+
+        <div class="col-md-6">
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Add (n Rows) <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a class="add by-replace">15</a></li>
+                    <li><a class="add by-replace">50</a></li>
+                    <li><a class="add by-replace">100</a></li>
+                    <li><a class="add by-replace">300</a></li>
+                    <li><a class="add by-replace">500</a></li>
+                    <li><a class="add by-replace">1000</a></li>
+                </ul>
+            </div>
+            <div class="alert alert-success">
+                <p> Use "replace()" and "concat()" </p>
+                <code class="html">
+                    data.replace(data.concat(fixtureData))
+                </code>
+                <br>
+
+                <div class="time-use by-replace"></div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <h3>Table:</h3>
+
+            <div class="table-container"></div>
+        </div>
+    </div>
+
 </div>
 
-<h3>Table:</h3>
-
-<div id="container">
-
-</div>
 
 <style type="text/css">
-    body {padding: 10px;}
-    #container {
-        width: 60%;
-        /*height: 300px;*/
-        /*border: 1px solid #c1c39a;*/
-        /*overflow: auto;*/
+    body { padding: 10px; }
+
+    .alert { margin-top: 10px; }
+
+    .table-container {
+        max-height: 300px;
+        overflow: auto;
     }
 </style>
 
 <script type='text/ejs' id='tpl'>
-    <table class="table table-striped">
+    <table class="table table-striped table-condensed">
         <thead>
             <tr>
                 <td>A</td>
@@ -73,6 +163,8 @@
             <% }); %>
         </tbody>
     </table>
+
+
 </script>
 
 </body>
