--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 
 <head>
 
-    <title>Demo - Create Infinte scroll effect using Jquery - Web developer juice</title>
-
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
-    <meta name="title" content=""/>
-    <meta name="author" content=""/>
-    <meta name="subject" content=""/>
-    <meta name="language" content="en"/>
-    <meta name="keywords" content=""/>
-
+    <title>Demo - can.List binding Demo</title>
     <script type="text/javascript" src="libs/jquery.min.js"></script>
     <script type="text/javascript" src="libs/can.jquery-1.1.5.js"></script>
     <script type="text/javascript" src="libs/bootstrap.min.js"></script>
